--- a/app/src/main/res/layout/fragment_list_rss_items.xml
+++ b/app/src/main/res/layout/fragment_list_rss_items.xml
@@ -8,8 +8,8 @@
         android:id="@+id/layout_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingBottom="10dp"
-        android:paddingHorizontal="10dp"
+        android:paddingBottom="@dimen/rss_item_padding_bottom"
+        android:paddingHorizontal="@dimen/rss_item_padding_horizontal"
         android:orientation="horizontal"
         android:weightSum="4"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,7 +31,7 @@
                 android:textColor="@color/white"
                 android:paddingBottom="10dp"
                 android:text="TextView"
-                android:textSize="20dp"
+                android:textSize="@dimen/title_rss_item_text_size"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -47,7 +47,7 @@
                     android:textColor="@color/white"
                     android:maxLines="1"
                     android:text="TextView"
-                    android:textSize="10sp" />
+                    android:textSize="@dimen/date_rss_item_text_size" />
 
                 <TextView
                     android:id="@+id/actor_rssItem"
@@ -56,14 +56,14 @@
                     android:layout_weight="1"
                     android:textColor="@color/white"
                     android:text="TextView"
-                    android:textSize="10sp" />
+                    android:textSize="@dimen/rss_item_actor_text_size" />
             </LinearLayout>
         </LinearLayout>
 
         <ImageView
             android:id="@+id/image_rssItem"
             android:layout_width="0dp"
-            android:paddingStart="5dp"
+            android:paddingStart="@dimen/rss_item_image_padding_start"
             android:layout_height="match_parent"
             android:layout_weight="1" />
     </LinearLayout>
