--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,10 +9,10 @@
         android:id="@+id/title_search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Search"
+        android:text="@string/title_search"
         android:textColor="@color/white"
-        android:paddingVertical="10dp"
-        android:textSize="25sp"
+        android:paddingVertical="@dimen/title_padding_vertical"
+        android:textSize="@dimen/title_text_size"
         android:textStyle="bold"
         android:textAlignment="center"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,25 +23,29 @@
     <AutoCompleteTextView
         android:id="@+id/text_url_search"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginTop="12dp"
-        android:textAlignment="center"
-        android:hint="Input your Rss"
-        android:layout_marginHorizontal="10dp"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="@dimen/search_text_padding_horizontal"
+        android:paddingVertical="@dimen/search_text_padding_vertical"
+        android:layout_marginTop="@dimen/seach_text_margin_top"
+        android:hint="@string/input_rss"
+        android:inputType="text"
+        android:maxLines="1"
+        android:layout_marginHorizontal="@dimen/search_text_margin_horizontal"
+        android:lines="1"
         android:textColor="@color/black"
         android:background="@color/white"
-        android:textSize="20sp"
+        android:textSize="@dimen/search_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title_search"
         app:layout_constraintVertical_bias="0.155"
         tools:layout_editor_absoluteX="0dp" />
 
     <Button
-        android:id="@+id/searchUrl"
+        android:id="@+id/search_url"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="35dp"
-        android:text="Search"
+        android:layout_marginTop="@dimen/search_button_margin_top"
+        android:text="@string/title_search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_url_search" />
