--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,60 @@
 <resources>
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="avt_size">100dp</dimen>
+    <dimen name="avt_margin_top">50dp</dimen>
+    <dimen name="avt_margin_bottom">50dp</dimen>
+    <dimen name="account_text_padding_end">10dp</dimen>
+    <dimen name="account_text_size">60dp</dimen>
+    <dimen name="account_text_margin_vertical">20dp</dimen>
+    <dimen name="account_text_sizesp">16dp</dimen>
+    <dimen name="sign_out_button_margin_top">50dp</dimen>
+    <dimen name="title_padding_vertical">10dp</dimen>
+    <dimen name="title_text_size">25sp</dimen>
+    <dimen name="item_height">80dp</dimen>
+    <dimen name="item_paddinng_start">10dp</dimen>
+    <dimen name="item_padding_horizontal">15dp</dimen>
+    <dimen name="title_item_text_size">20dp</dimen>
+    <dimen name="date_item_text_size">10sp</dimen>
+    <dimen name="list_rss_padding_vertical">10dp</dimen>
+    <dimen name="list_rss_title_text_size">20sp</dimen>
+    <dimen name="list_rsspadding_horizontal">10dp</dimen>
+    <dimen name="list_rss_padding_top">10dp</dimen>
+    <dimen name="progressbar_size">70dp</dimen>
+    <dimen name="rss_item_padding_bottom">10dp</dimen>
+    <dimen name="rss_item_padding_horizontal">10dp</dimen>
+    <dimen name="title_rss_item_text_size">20dp</dimen>
+    <dimen name="date_rss_item_text_size">10sp</dimen>
+    <dimen name="rss_item_actor_text_size">10sp</dimen>
+    <dimen name="rss_item_image_padding_start">5dp</dimen>
+    <dimen name="search_text_padding_horizontal">10dp</dimen>
+    <dimen name="search_text_padding_vertical">5dp</dimen>
+    <dimen name="seach_text_margin_top">12dp</dimen>
+    <dimen name="search_text_margin_horizontal">20dp</dimen>
+    <dimen name="search_text_size">20sp</dimen>
+    <dimen name="search_button_margin_top">35dp</dimen>
+    <dimen name="sign_in_icon_size">30dp</dimen>
+    <dimen name="sign_in_icon_margin_top">15dp</dimen>
+    <dimen name="sign_in_icon_margin_start">15dp</dimen>
+    <dimen name="sign_in_button_size">100dp</dimen>
+    <dimen name="sign_in_button_margin_top">20dp</dimen>
+    <dimen name="sign_in_button_text_size">12sp</dimen>
+    <dimen name="sign_in_back_button_width">77dp</dimen>
+    <dimen name="sign_in_back_button_height">40dp</dimen>
+    <dimen name="sign_in_back_button_margin_start">8dp</dimen>
+    <dimen name="sign_in_back_button_margin_top">16dp</dimen>
+    <dimen name="sign_in_text_size_height">60dp</dimen>
+    <dimen name="sign_in_text_margin_start">40dp</dimen>
+    <dimen name="sign_in_text_margin_end">40dp</dimen>
+    <dimen name="sign_in_text_margin_top">20dp</dimen>
+    <dimen name="sign_in_text_padding_start">55dp</dimen>
+    <dimen name="sign_in_text_padding_end">10dp</dimen>
+    <dimen name="sign_in_button_margin_bottom">220dp</dimen>
+    <dimen name="sign_in_google_button_margin">50dp</dimen>
+    <dimen name="sign_up_text_size">60dp</dimen>
+    <dimen name="sign_up_text_margin_horizontal">40dp</dimen>
+    <dimen name="sign_up_padding_horizontal">15dp</dimen>
+    <dimen name="sign_up_padding_top">20dp</dimen>
+    <dimen name="sign_up_button_register_size">46dp</dimen>
+    <dimen name="sign_up_button_marhin_top">100dp</dimen>
+    <dimen name="button_register_text_size">12sp</dimen>
 </resources>
