--- a/app/src/main/res/layout/fragment_history_item.xml
+++ b/app/src/main/res/layout/fragment_history_item.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="@dimen/item_height"
     android:orientation="horizontal"
-    android:paddingHorizontal="15dp"
+    android:background="@color/background_list_history"
+    android:paddingHorizontal="@dimen/item_padding_horizontal"
     android:weightSum="5">
 
     <ImageView
@@ -18,7 +19,7 @@
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:orientation="vertical"
-        android:paddingStart="10dp"
+        android:paddingStart="@dimen/item_paddinng_start"
         android:weightSum="8">
 
         <TextView
@@ -27,7 +28,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/white"
             android:layout_weight="4"
-            android:textSize="20dp"
+            android:textSize="@dimen/title_item_text_size"
             android:textStyle="bold"
             android:maxLines="1"
             android:text="VNExpress" />
@@ -37,7 +38,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="3"
-
             android:textColor="@color/white"
             android:maxLines="1"
             android:text="asdas.com" />
@@ -50,7 +50,7 @@
 
             android:textColor="@color/white"
             android:gravity="right"
-            android:textSize="10sp"
+            android:textSize="@dimen/date_item_text_size"
             android:text="30/4/2021" />
     </LinearLayout>
 </LinearLayout>
