--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -9,26 +9,26 @@
 
 
     <ImageView
-        android:id="@+id/backbutton"
-        android:layout_width="77dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:id="@+id/back_button_sign_in"
+        android:layout_width="@dimen/sign_in_back_button_width"
+        android:layout_height="@dimen/sign_in_back_button_height"
+        android:layout_marginStart="@dimen/sign_in_back_button_margin_start"
+        android:layout_marginTop="@dimen/sign_in_back_button_margin_top"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_arrow_back_24" />
 
     <EditText
-        android:id="@+id/usename_sign_in"
+        android:id="@+id/username_sign_in"
         android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginEnd="40dp"
+        android:layout_height="@dimen/sign_in_text_size_height"
+        android:layout_marginStart="@dimen/sign_in_text_margin_start"
+        android:layout_marginEnd="@dimen/sign_in_text_margin_end"
         android:background="@drawable/input_bar"
         android:ems="10"
         android:inputType="textPersonName"
-        android:paddingStart="55dp"
-        android:paddingEnd="10dp"
+        android:paddingStart="@dimen/sign_in_text_padding_start"
+        android:paddingEnd="@dimen/sign_in_text_padding_end"
         android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,38 +40,31 @@
     <EditText
         android:id="@+id/password_sign_in"
         android:layout_width="0dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="40dp"
+        android:layout_height="@dimen/sign_in_text_size_height"
+        android:layout_marginStart="@dimen/sign_in_text_margin_start"
+        android:layout_marginEnd="@dimen/sign_in_text_margin_end"
+        android:layout_marginTop="@dimen/sign_in_text_margin_top"
         android:background="@drawable/input_bar"
         android:ems="10"
         android:inputType="textPassword"
-        android:paddingStart="55dp"
-        android:paddingEnd="10dp"
+        android:paddingStart="@dimen/sign_in_text_padding_start"
+        android:paddingEnd="@dimen/sign_in_text_padding_end"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usename_sign_in" />
+        app:layout_constraintTop_toBottomOf="@+id/username_sign_in" />
 
     <Button
         android:id="@+id/sign_in_button_sign_in"
-        android:layout_width="100dp"
+        android:layout_width="@dimen/sign_in_button_size"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/sign_in_button_margin_top"
         android:background="@drawable/radius_button"
-        android:padding="0dp"
-        android:paddingStart="0dp"
-        android:paddingLeft="0dp"
-        android:paddingTop="0dp"
-        android:paddingEnd="0dp"
-        android:paddingRight="0dp"
-        android:paddingBottom="0dp"
-        android:text="Đăng Nhập"
+        android:text="@string/sign_in"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="12sp"
-        app:iconPadding="0dp"
+        android:textSize="@dimen/sign_in_button_text_size"
+        android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.218"
         app:layout_constraintStart_toStartOf="parent"
@@ -80,42 +73,33 @@
 
 
     <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        app:layout_constraintStart_toStartOf="@+id/usename_sign_in"
-        app:layout_constraintTop_toTopOf="@+id/usename_sign_in"
+        android:layout_width="@dimen/sign_in_icon_size"
+        android:layout_height="@dimen/sign_in_icon_size"
+        android:layout_marginStart="@dimen/sign_in_icon_margin_start"
+        android:layout_marginTop="@dimen/sign_in_icon_margin_top"
+        app:layout_constraintStart_toStartOf="@+id/username_sign_in"
+        app:layout_constraintTop_toTopOf="@+id/username_sign_in"
         app:srcCompat="@drawable/icon_user" />
 
     <ImageView
-        android:id="@+id/imageView3"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
+        android:layout_width="@dimen/sign_in_icon_size"
+        android:layout_height="@dimen/sign_in_icon_size"
+        android:layout_marginStart="@dimen/sign_in_icon_margin_start"
+        android:layout_marginTop="@dimen/sign_in_icon_margin_top"
         app:layout_constraintStart_toStartOf="@+id/password_sign_in"
         app:layout_constraintTop_toTopOf="@+id/password_sign_in"
         app:srcCompat="@drawable/icon_password" />
 
     <Button
-        android:id="@+id/sign_up_button_sign_in"
-        android:layout_width="100dp"
+        android:id="@+id/register_button"
+        android:layout_width="@dimen/sign_in_button_size"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="@dimen/sign_in_button_margin_top"
         android:background="@drawable/radius_button_white"
-        android:padding="0dp"
-        android:paddingStart="0dp"
-        android:paddingLeft="0dp"
-        android:paddingTop="0dp"
-        android:paddingEnd="0dp"
-        android:paddingRight="0dp"
-        android:paddingBottom="0dp"
-        android:text="Đăng Kí"
+        android:text="@string/register"
         android:textAllCaps="false"
-        android:textColor="#FFFFFF"
-        android:textSize="12sp"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sign_in_button_text_size"
         android:textStyle="normal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/sign_in_button_sign_in"
@@ -123,13 +107,13 @@
 
 
     <com.google.android.gms.common.SignInButton
-        android:id="@+id/sign_up_with_google_button"
+        android:id="@+id/button_sign_in_with_google"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginStart="50dp"
-        android:layout_marginEnd="50dp"
-        android:layout_marginBottom="220dp"
+        android:layout_marginStart="@dimen/sign_in_google_button_margin"
+        android:layout_marginEnd="@dimen/sign_in_google_button_margin"
+        android:layout_marginBottom="@dimen/sign_in_button_margin_bottom"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -137,18 +121,14 @@
         app:layout_constraintTop_toBottomOf="@+id/sign_in_button_sign_in"
         app:layout_constraintVertical_bias="0.772" />
 
-    <com.facebook.login.widget.LoginButton
-        android:id="@+id/login_button"
-        android:layout_width="0dp"
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginStart="53dp"
-        android:layout_marginEnd="53dp"
-        android:drawablePadding="0dp"
-        android:paddingTop="12dp"
-        android:paddingBottom="12dp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/sign_up_with_google_button" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
