--- a/app/src/main/res/layout/fragment_web_view.xml
+++ b/app/src/main/res/layout/fragment_web_view.xml
@@ -5,10 +5,8 @@
     android:layout_height="match_parent"
     tools:context=".ui.readWeb.WebViewFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-
     <WebView
-        android:id="@+id/webView"
+        android:id="@+id/web_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
